--- a/src/components/MovieRow.css
+++ b/src/components/MovieRow.css
@@ -12,11 +12,11 @@
 }
 
 .movieRow--list{
-    width: 999999999px;
+    transition: all ease .5s;
 }
 
 .movieRow--item{
-    width: 250px;
+    width: 220px;
     display: inline-block;
 }
 
@@ -30,4 +30,40 @@
 .movieRow--item img:hover{
     transform: scale(1);
     cursor: pointer;
+}
+
+.movieRow--left{
+    left: 0;
+}
+
+.movieRow--right{
+    right: 0;
+}
+
+.movieRow--left,
+.movieRow--right{
+    position: absolute;
+    width: 40px;
+    height: 325px;
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+    opacity: 0;
+    transition: all ease .5s;
+}
+
+.movieRow:hover .movieRow--left,
+.movieRow:hover .movieRow--right{
+    opacity: 1;
+}
+
+
+@media (max-width:760px){
+    .movieRow--left, .movieRow--right{
+        opacity: 1;
+    }
 }
