--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,21 @@ body{
 .lists{
     margin-top: -150px;
 }
+
+footer{
+    text-align: center;
+    margin: 10px auto;
+}
+
+.loading{
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
